# rules_go-gateway-demo

./: BUILD.bazel  WORKSPACE
example/: BUILD.bazel  greeter.go
