package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")
load(
    "@org_pubref_rules_protobuf//grpc_gateway:rules.bzl",
    "grpc_gateway_proto_compile",
    "grpc_gateway_proto_library",
    "grpc_gateway_swagger_compile",
    "grpc_gateway_binary",
    "GRPC_GATEWAY_DEPS",
)

grpc_gateway_proto_library(
    name = "gateway",
    protos = ["helloworld.proto"],

)

grpc_gateway_swagger_compile(
    name = "swagger",
    protos = ["helloworld.proto"],
)

grpc_gateway_binary(
    name = "greeter",
    srcs = ["greeter.go"],
    protos = ["helloworld.proto"],
)
